Implemented login/register

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "devDependencies": {
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
+  },
+  "scripts": {
+    "build": "webpack --mode=development"
   }
-  
+
 }
