--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "firebase": "^9.14.0",
-    "firebaseui": "^6.0.1"
+    "firebase-admin": "^11.3.0",
+    "firebaseui": "^6.0.1",
+    "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "webpack": "^5.75.0",
@@ -10,5 +12,4 @@
   "scripts": {
     "build": "webpack --mode=development"
   }
-
 }
