--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "firebase-admin": "^11.3.0",
     "firebaseui": "^6.0.1",
     "nodemailer": "^6.8.0"
+    
   },
   "devDependencies": {
     "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "languagedetect": "^2.0.0"
   },
   "scripts": {
     "build": "webpack --mode=development"
   }
+  
 }
