login/register working again

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,28 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "redirects": [
+      {
+        "source": "/signup",
+        "destination": "./signup.html"
+      },
+      {
+        "source": "/index",
+        "destination": "./index.html"
+      },
+      {
+        "source": "/edit",
+        "destination": "./edit.html"
+      },
+      {
+        "source": "/reset",
+        "destination": "./reset.html"
+      },
+      {
+        "source": "/merge",
+        "destination": "./merge.html"
+      }
     ]
   }
 }
